# kakoi

./: .gitignore  README.md  TODO.md
documentation/: Makefile  README.md  config.mk  config.mk.template  reload-browser.sh
documentation/src/: algo-commit-transaction.md  algo-existing-leaf-toplevel.md  algo-new-leaf-toplevel.md  algo-remove-n-toplevel.md  algorithm-commit-transaction.md  algorithm-extend-leaf.md  algorithm-init.md  algorithms.md  any-data.md  bongard-problem-answer.md  building.md  data-versus-interpretation.md  design-goals.md  graph.md  implementation.md  introduction.md  kakoi.md  structure-through-surrounding.md  support-queries.md  zooming.md
src/kakoi/: Cargo.toml  README.md  build.rs
src/kakoi/src/: action.rs  adapter.rs  arena.rs  camera.rs  circle.rs  copy_instructor.rs  extend.rs  flat_action.rs  flat_graph.rs  forest.rs  graph.rs  graph_group_iterator.rs  graph_impl.rs  index.rs  input_manager.rs  input_map.rs  input_state.rs  keymap.rs  lib.rs  new_input_manager.rs  newstore.rs  recurse.rs  recursive_copy_instructor.rs  render.rs  sampling_config.rs  spatial_bound.rs  spatial_tree.rs  sphere.rs  square_cuboid.rs  state.rs  store.rs  svg.rs  tree.rs  walker.rs  window.rs
src/kakoi/src/render/: builder.rs  circle.rs  history.rs  image.rs  indication_tree.rs  mod.rs  rectangle.rs  renderer.rs  text.rs
src/kakoi/src/resources/images/: Kakoi Example 1 [senseis.xmp.net].png.backup
src/kakoi/src/shaders/: shader.frag  shader.vert
src/kakoi/src/shaders/src/: image.frag  image.vert  shader.frag  shader.vert
src/kakoi_lib/: Cargo.toml
(+1 files in other folders)
