[package]
name = "kakoi"
version = "0.1.0"
authors = ["Michael MacLeod <michaelmmacleod@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "kakoi"
doc = false

[dependencies]
bitvec = "0.21.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.7"
float-cmp = "0.8.0"
futures = "0.3"
image = "0.23"
log = "0.4"
rayon = "1.4"
svg = "0.9.0"
wgpu = "0.7"
winit = "0.22"
clap = "2.33.3"
wgpu_glyph = "0.11.0"
slotmap = "1.0"
unicode-segmentation = "1.7.1"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
rayon = "1.4"
shaderc = "0.7"